--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -21,5 +21,10 @@ pipeline {
                 sh './jenkins/scripts/deliver.sh'
             }
         }
+        stage('Complete') {
+            steps {
+                echo "build is completed"
+            }
+        }
     }
 }
